add splash screen and track mouse movements
- rive is used for splash screen animation

--- a/web/index.html
+++ b/web/index.html
@@ -54,6 +54,14 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <!-- background color -->
+  <style>
+    body{
+      background-color: #194D54;
+    }
+  </style>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
