configure google analytics

--- a/web/index.html
+++ b/web/index.html
@@ -46,12 +46,14 @@
     gtag('js', new Date());
 
     // // Replace UA-XXXXXXXXX-X with Google Analytics ID
-    gtag('config', 'UA-168944360-2');
-    // gtag('config', 'UA-168944360-2', { send_page_view: false });
+    // gtag('config', 'UA-168944360-2');
+    gtag('config', 'UA-168944360-2', { send_page_view: false });
   </script>
 
   <title>immadisairaj</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="app.js" defer></script>
 </head>
 <body>
 
