update gtag property

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,9 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- Replace UA-XXXXXXXXX-X with Google Analytics ID -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168944360-2"></script>
+  
+  <!-- GA 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DX3BMFPGD"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -48,6 +51,9 @@
     // // Replace UA-XXXXXXXXX-X with Google Analytics ID
     // gtag('config', 'UA-168944360-2');
     gtag('config', 'UA-168944360-2', { send_page_view: false });
+
+    // GA4
+    gtag('config', 'G-3DX3BMFPGD', { send_page_view: false });
   </script>
 
   <title>Sai Rajendra Immadi</title>
