--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Sai Rajendra Immadi">
 
   <html prefix="og: http://ogp.me/ns#">
   <meta property="og:url" content="https://immadisairaj.github.io/" />
