--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   <meta property="og:image" content="logo.png" />
   <meta property="og:title" content="immadisairaj" />
   <meta property="og:description"
-    content="To know about Sai Rajendra Immadi and to experience some cool animations, visit to the website he made!!" />
+    content="To know about Sai Rajendra Immadi and to experience some cool animations, visit the website he made!!" />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
